Complete App Store submission preparation
- Update main app Info.plist with proper Bundle ID and metadata
- Update Safari extension Info.plist with Japanese description
- Add PrivacyInfo.xcprivacy for 2025 App Store requirements
- Configure proper Bundle IDs: com.takekikuch.TwitchChatFlow.TwitchChatFlow
- Ready for App Store Connect submission

--- a/TwitchChatFlow/TwitchChatFlow Extension/Info.plist
+++ b/TwitchChatFlow/TwitchChatFlow Extension/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDisplayName</key>
 	<string>Twitch Chat Flow</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.takekikuch.TwitchChatFlow.Extension</string>
+	<string>com.takekikuch.TwitchChatFlow.TwitchChatFlow.Extension</string>
 	<key>CFBundleVersion</key>
 	<string>1.0.0</string>
 	<key>CFBundleShortVersionString</key>
